[package]
name = "i2c_oled_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics = "0.7.1"
ssd1306 = "0.7.1"
systemstat = "0.2.2"
dht11 = "0.3.1"
dht11_gpio = "0.1.0"
rppal = { version = "0.18.0", features = ["hal"] }

[target.armv7-unknown-linux-musleabihf]
linker = "arm-linux-musleabihf-ld"